--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,59 @@
-body {
+/* Reset */
+* {
   font-family: sans-serif;
+  padding: 0;
+  margin: 0;
+}
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+/* Nodes */
 *[contenteditable="true"] {
   padding: 10px;
   border: 1px solid #ccc;
   outline: none;
 }
 
+/* Buttons */
+button {
+  cursor: pointer;
+  appearance: none;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  height: 24px;
+  width: 24px;
+  border: 0.5px solid #999;
+}
 button[data-state="true"] {
   background-color: red;
   color: wheat;
+}
+
+/* Commandbar*/
+.commands {
+  padding: 5px 10px;
+  background: #222;
+  display: table;
+  border-radius: 3px;
+  position: absolute;
+}
+.commands::before {
+  position: absolute;
+  width: 0;
+  height: 0;
+  content: "";
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #222;
+  bottom: -10px;
+  left: 40%;
+}
+.commands > button {
+  color: white;
+  margin-right: 5px;
+}
+.commands > button:last-child {
+  margin-right: 0;
 }
