Create showCommandBar func This func help to toggle commandsbar element

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ button[data-state="true"] {
   display: table;
   border-radius: 3px;
   position: absolute;
+  display: none;
 }
 .commands::before {
   position: absolute;
